[gd_scene load_steps=31 format=3 uid="uid://dxi413p71bf7s"]

[ext_resource type="Script" uid="uid://be4dnwb6q21ms" path="res://scenes/fungate.gd" id="1_5cohp"]
[ext_resource type="Texture2D" uid="uid://v8bvtcp75o4s" path="res://assets/Tent/Gate.png" id="2_cx8a8"]
[ext_resource type="Texture2D" uid="uid://3ycqjxw0yj8s" path="res://assets/Sprite Sheets/Gate_Animated-Sheet.png" id="2_qg8rk"]
[ext_resource type="Texture2D" uid="uid://0bg8h3jhei8v" path="res://assets/art/gatetop.png" id="2_qgrv6"]
[ext_resource type="AudioStream" uid="uid://cde6wev2eyhxk" path="res://assets/allsound/SFX/GateOpen.wav" id="5_ecr7t"]
[ext_resource type="AudioStream" uid="uid://ca6xh7e8h8epa" path="res://assets/allsound/SFX/GateDenied.wav" id="6_7yjq4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ecr7t"]
atlas = ExtResource("2_qg8rk")
region = Rect2(0, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yjq4"]
atlas = ExtResource("2_qg8rk")
region = Rect2(960, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_4udwu"]
atlas = ExtResource("2_qg8rk")
region = Rect2(1920, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_580qc"]
atlas = ExtResource("2_qg8rk")
region = Rect2(2880, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_ol77c"]
atlas = ExtResource("2_qg8rk")
region = Rect2(3840, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_6m02k"]
atlas = ExtResource("2_qg8rk")
region = Rect2(4800, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qd7y"]
atlas = ExtResource("2_qg8rk")
region = Rect2(5760, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ud64"]
atlas = ExtResource("2_qg8rk")
region = Rect2(6720, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_j2oop"]
atlas = ExtResource("2_qg8rk")
region = Rect2(7680, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wnwn"]
atlas = ExtResource("2_qg8rk")
region = Rect2(8640, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuogw"]
atlas = ExtResource("2_qg8rk")
region = Rect2(9600, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_qk70w"]
atlas = ExtResource("2_qg8rk")
region = Rect2(10560, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0f14"]
atlas = ExtResource("2_qg8rk")
region = Rect2(11520, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_0f6bx"]
atlas = ExtResource("2_qg8rk")
region = Rect2(12480, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m7e8"]
atlas = ExtResource("2_qg8rk")
region = Rect2(13440, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw547"]
atlas = ExtResource("2_qg8rk")
region = Rect2(14400, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_4qaon"]
atlas = ExtResource("2_qg8rk")
region = Rect2(15360, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxjo0"]
atlas = ExtResource("2_qg8rk")
region = Rect2(16320, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_klm4k"]
atlas = ExtResource("2_qg8rk")
region = Rect2(17280, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvha7"]
atlas = ExtResource("2_qg8rk")
region = Rect2(18240, 0, 960, 480)

[sub_resource type="AtlasTexture" id="AtlasTexture_0sytu"]
atlas = ExtResource("2_qg8rk")
region = Rect2(19200, 0, 960, 480)

[sub_resource type="SpriteFrames" id="SpriteFrames_oy5o7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecr7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yjq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4udwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_580qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ol77c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6m02k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2qd7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ud64")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j2oop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wnwn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuogw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qk70w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0f14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0f6bx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m7e8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw547")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4qaon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxjo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_klm4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rvha7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sytu")
}],
"loop": false,
"name": &"default",
"speed": 13.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_2se1t"]
size = Vector3(1.32446, 1, 0.187012)

[sub_resource type="BoxShape3D" id="BoxShape3D_snkpy"]
size = Vector3(1, 0.615723, 0.615723)

[node name="fungate" type="Node3D"]
transform = Transform3D(4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0)
script = ExtResource("1_5cohp")

[node name="sprite1" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0136222, 0, 0.124215)
pixel_size = 0.0014
alpha_cut = 3
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_oy5o7")

[node name="sprite2" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0136222, 0, -0.0716112)
pixel_size = 0.0014
alpha_cut = 3
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_oy5o7")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.15, 0, 0, 0, 0.15, 0, 0, 0, 0.15, 0, 0, 0.114131)
visible = false
texture_filter = 0
texture = ExtResource("2_cx8a8")

[node name="Sprite3D" type="Sprite3D" parent="Sprite3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.17427)
texture_filter = 0
texture = ExtResource("2_cx8a8")

[node name="topSprite" type="Sprite3D" parent="."]
transform = Transform3D(1.28994, -2.03272e-10, 0.00930292, -0.0120008, -4.36574e-08, 0.999957, 2.62221e-10, -1, -4.36574e-08, -0.00192359, 0.144945, 0.0307291)
texture_filter = 0
texture = ExtResource("2_qgrv6")

[node name="Sprite3D4" type="Sprite3D" parent="."]
transform = Transform3D(0.0418645, 0.0223562, 0.995857, -0.473132, 0.0110568, 0.0879061, -0.00429674, -0.999689, 0.0232428, 0.615395, -0.0697774, 0.0250087)
texture_filter = 0
texture = ExtResource("2_qgrv6")

[node name="Sprite3D5" type="Sprite3D" parent="."]
transform = Transform3D(-0.0418645, -0.0223563, -0.995857, -0.473132, 0.0110568, 0.0879061, 0.00429674, 0.999689, -0.0232428, -0.592777, -0.0697774, 0.0250087)
texture_filter = 0
texture = ExtResource("2_qgrv6")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.024146)
shape = SubResource("BoxShape3D_2se1t")

[node name="passCheckArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="passCheckArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.192139, -0.429932)
shape = SubResource("BoxShape3D_snkpy")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="passCheckArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.192139, 0.517865)
shape = SubResource("BoxShape3D_snkpy")

[node name="gateDownTimer" type="Timer" parent="."]
one_shot = true

[node name="gateOpenSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, -0.453347, 0.277179, 0)
stream = ExtResource("5_ecr7t")

[node name="gateDeniedSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.445271, 0.261481, 0)
stream = ExtResource("6_7yjq4")

[connection signal="body_entered" from="passCheckArea" to="." method="_on_pass_check_area_body_entered"]
[connection signal="body_exited" from="passCheckArea" to="." method="_on_pass_check_area_body_exited"]
[connection signal="timeout" from="gateDownTimer" to="." method="_on_gate_down_timer_timeout"]
